--- a/GlazerCalcUWP/MainPage.xaml
+++ b/GlazerCalcUWP/MainPage.xaml
@@ -9,6 +9,23 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" Margin="0,10,0,0" Text="Glazer Calculator" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="48"/>
+        <TextBox x:Name="widthBox" HorizontalAlignment="Left" Text="" VerticalAlignment="Top" Margin="447,120,0,0" RenderTransformOrigin="0.5,0.489" Width="190" PlaceholderText="Enter width..." TextChanged="widthBox_TextChanged"/>
+        <TextBox x:Name="heightBox" HorizontalAlignment="Left" Text="" VerticalAlignment="Top" Margin="447,180,0,0" RenderTransformOrigin="0.5,0.489" Width="190" Height="32" PlaceholderText="Enter height..." TextChanged="heightBox_TextChanged"/>
+        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="383,122,0,0" Text="Width:" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" Width="51" FontSize="18" IsHitTestVisible="False" RenderTransformOrigin="0.475,0.493"/>
+        <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="378,184,0,426" Text="Height" TextWrapping="Wrap" Width="75" FontSize="18" IsHitTestVisible="False"/>
+        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="447,240,0,0" VerticalAlignment="Top" Width="190">
+            <ComboBoxItem Content="Brown" FocusVisualPrimaryBrush="Chocolate"/>
+            <ComboBoxItem Content="Black"/>
+            <ComboBoxItem Content="Blue" FocusVisualPrimaryBrush="#FF0023FF"/>
+        </ComboBox>
+        <TextBlock x:Name="textBlock1_Copy1" HorizontalAlignment="Left" Margin="388,244,0,366" Text="Color:" TextWrapping="Wrap" Width="75" FontSize="18" IsHitTestVisible="False" VerticalAlignment="Stretch"/>
+        <TextBlock x:Name="sliderResultBox" Text="" TextWrapping="Wrap" Margin="664,326,0,0" HorizontalAlignment="Left" Width="38" VerticalAlignment="Top" Height="30"/>
+        <Button x:Name="button" Content="Calculate" HorizontalAlignment="Left" Margin="502,385,0,0" VerticalAlignment="Top" Click="button_Click"/>
+        <TextBox x:Name="woodLengthResult" HorizontalAlignment="Left" Text="" VerticalAlignment="Top" Margin="448,447,0,0" RenderTransformOrigin="0.5,0.489" Width="190" PlaceholderText="Result..." IsReadOnly="True"/>
+        <TextBox x:Name="glassAreaResult" HorizontalAlignment="Left" Text="" VerticalAlignment="Top" Margin="448,500,0,0" RenderTransformOrigin="0.5,0.489" Width="190" Height="32" IsReadOnly="True" PlaceholderText="Result..."/>
+        <TextBlock x:Name="textBlock1_Copy2" HorizontalAlignment="Left" Margin="314,451,0,0" Text="Wood Length" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" Width="115" FontSize="18" IsHitTestVisible="False" RenderTransformOrigin="0.475,0.493"/>
+        <TextBlock x:Name="textBlock1_Copy3" HorizontalAlignment="Left" Margin="341,504,0,106" Text="Glass Area" TextWrapping="Wrap" Width="101" FontSize="18" IsHitTestVisible="False"/>
+        <Slider x:Name="slider" HorizontalAlignment="Left" Margin="448,320,0,0" VerticalAlignment="Top" Width="189" ValueChanged="slider_ValueChanged"/>
     </Grid>
 </Page>
